--- a/src/app/pages/organization/masters/templates/branch/branch-add.html
+++ b/src/app/pages/organization/masters/templates/branch/branch-add.html
@@ -12,8 +12,12 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Location</label>
                 <div class="col-sm-9">
-                    <select name="BRLocationId" class="form-control selectpicker with-search" data-live-search="true" title="Select Location" selectpicker ng-model="addCtrl.entity.BRLocationId"
+                    <!--<select name="BRLocationId" class="form-control selectpicker with-search" data-live-search="true" title="Select Location" selectpicker ng-model="addCtrl.entity.BRLocationId"
                         ng-options="opt.value as opt.name for opt in addCtrl.selects.BRLocationId" required>
+                    </select>-->
+
+                     <select class="form-control" chosen title="Select Location" ng-model="addCtrl.entity.BRLocationId" ng-options="opt.value as opt.name for opt in addCtrl.selects.BRLocationId"
+                        required>
                     </select>
                 </div>
             </div>
