--- a/src/app/pages/organization/masters/templates/location/location-add.html
+++ b/src/app/pages/organization/masters/templates/location/location-add.html
@@ -9,14 +9,24 @@
                         placeholder="Enter Location Name">
                 </div>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Country</label>
                 <div class="col-sm-9">
                     <select class="form-control selectpicker with-search" data-live-search="true" title="Select Country" selectpicker ng-model="addCtrl.entity.CountryId"
                         ng-options="opt.value as opt.name for opt in addCtrl.selects.CountryId" required>
                     </select>
                 </div>
+            </div>-->
+
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-3 control-label">Country</label>
+                <div class="col-sm-9">
+                    <select class="form-control" chosen title="Select Country" ng-model="addCtrl.entity.CountryId" ng-options="opt.value as opt.name for opt in addCtrl.selects.CountryId"
+                        required>
+                    </select>
+                </div>
             </div>
+
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">State</label>
                 <div class="col-sm-9">
