--- a/src/app/pages/organization/masters/templates/sub-unit/sub-unit-add.html
+++ b/src/app/pages/organization/masters/templates/sub-unit/sub-unit-add.html
@@ -12,8 +12,11 @@
             <div class="form-group">
                 <label for="inputPassword3" class="col-sm-4 control-label">Location Name</label>
                 <div class="col-sm-8">
-                    <select class="form-control selectpicker with-search" data-live-search="true" title="Select Location" selectpicker ng-model="addCtrl.entity.LocationId"
+                    <!--<select class="form-control selectpicker with-search" data-live-search="true" title="Select Location" selectpicker ng-model="addCtrl.entity.LocationId"
                         ng-options="opt.value as opt.name for opt in addCtrl.selects.LocationId" required>
+                    </select>-->
+                    <select class="form-control" chosen title="Select Location" ng-model="addCtrl.entity.LocationId" ng-options="opt.value as opt.name for opt in addCtrl.selects.LocationId"
+                        required>
                     </select>
                 </div>
             </div>
