employee bug resolve

--- a/src/app/pages/organization/employee/add/employeeAdd.html
+++ b/src/app/pages/organization/employee/add/employeeAdd.html
@@ -70,7 +70,7 @@
    <div class="col-sm-4">
     <div class="form-group">
       <label for="inputMobile">Mobile*</label>
-      <input type="text" class="form-control" id="inputMobile" maxlength="15" ng-model="addCtrl.empAdd.PdMobileNo" placeholder="Mobile">
+      <input numeric-Only type="text" class="form-control" id="inputMobile" maxlength="15" ng-model="addCtrl.empAdd.PdMobileNo" placeholder="Mobile">
     </div>
   </div>
 </div>
